Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-1633

[Python] numpy "unicode" arrays not understood

    XMLWordPrintableJSON

Details

    Description

      import numpy as np
      pa.StringArray.from_pandas(np.empty(1, np.unicode))
      

      Throws:

      ---------------------------------------------------------------------------
      ArrowNotImplementedError                  Traceback (most recent call last)
      <ipython-input-68-f9bc946f2c0a> in <module>()
            1 import numpy as np
      ----> 2 pa.StringArray.from_pandas(np.empty(1, np.unicode))
      
      array.pxi in pyarrow.lib.Array.from_pandas()
      
      error.pxi in pyarrow.lib.check_status()
      
      ArrowNotImplementedError: Unsupported numpy type 19
      

      np.object arrays work, though...

      Attachments

        Issue Links

          Activity

            People

              wesm Wes McKinney
              njw45 Nick White
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: