ARROW-1633: [Python] Support NumPy string and unicode types in pyarrow.array, Array.from_pandas

I suppose this could have been worse. If anyone has any better ideas about alternatives to my onion router of UTF32 bytes -> PyUnicode -> PyBytes (UTF8) -> StringBuilder, I'm open to them. Since we support gcc 4.8 we don't have the option of using `std::codecvt`.

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #1167 from wesm/ARROW-1633 and squashes the following commits:

f0840b4 [Wes McKinney] Also test big-endian unicode
ca59ada [Wes McKinney] Implement NumPy unicode to Arrow utf8 conversion, deal with masks, truncated values
9304216 [Wes McKinney] Convert NumPy string (ascii) arrays to arrow binary arrays, handle mask and strided versions